// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatInterface matches snapshot in empty state 1`] = `
<div>
  <div
    class="flex h-full w-full bg-obsidian overflow-hidden"
  >
    <div
      class="h-full bg-charcoal/80 border-r border-ash/40 flex flex-col w-64 flex-shrink-0"
    >
      <div
        class="p-3 border-b border-ash/40 flex-shrink-0 flex items-center gap-2"
      >
        <button
          aria-label="Collapse sidebar"
          class="p-1.5 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150"
        >
          <svg
            class="w-5 h-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="flex-1 px-3 py-2 bg-gold/10 hover:bg-gold/20 text-gold border border-gold/30 flex items-center justify-center gap-2 transition-colors duration-200"
        >
          <svg
            class="w-4 h-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            New Chat
          </span>
        </button>
      </div>
      <div
        class="flex-1 overflow-y-auto py-2"
      >
        <div
          class="space-y-1 px-2"
        >
          <button
            class="w-full px-3 py-2 text-left transition-colors duration-150 bg-ash/40 text-white"
          >
            <p
              class="text-sm font-medium truncate"
            >
              Conversation 1
            </p>
            <p
              class="text-xs text-silver/60 truncate mt-0.5"
            >
              Hello...
            </p>
          </button>
          <button
            class="w-full px-3 py-2 text-left transition-colors duration-150 text-silver hover:bg-ash/20 hover:text-white"
          >
            <p
              class="text-sm font-medium truncate"
            >
              Conversation 2
            </p>
            <p
              class="text-xs text-silver/60 truncate mt-0.5"
            >
              World...
            </p>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex flex-col min-w-0 relative"
    >
      <div
        class="flex-1 flex flex-col min-h-0 relative transition-all duration-500 justify-center"
      >
        <div
          class="transition-all duration-500 ease-in-out flex-1"
        />
        <div
          class="transition-all duration-500 ease-in-out overflow-hidden flex flex-col flex-zero opacity-0"
        >
          <div
            class="flex flex-col w-full h-full overflow-y-auto scroll-smooth px-4 py-6 overscroll-contain flex-1"
          >
            <div
              class="relative flex flex-col gap-3"
            />
            <div
              aria-hidden="true"
              class="shrink-0 pointer-events-none"
              style="height: 0px;"
            />
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out z-10 w-full p-4"
        >
          <div
            class="w-full flex flex-col items-center justify-center transition-all duration-300 ease-out"
          >
            <p
              class="text-silver text-sm mb-4 text-center"
            >
              Type to begin
            </p>
            <div
              class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200 max-w-lg"
            >
              <div
                class="flex items-end"
              >
                <button
                  aria-label="Attach file"
                  class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-paperclip w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
                    />
                  </svg>
                </button>
                <input
                  aria-hidden="true"
                  class="hidden"
                  multiple=""
                  type="file"
                />
                <textarea
                  class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12"
                  placeholder="Send a message..."
                  rows="1"
                  style="max-height: 200px;"
                />
                <button
                  aria-label="Send message"
                  class="absolute right-2 bottom-2 p-2 transition-colors duration-200 text-silver/40 cursor-not-allowed"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-send w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                    />
                    <path
                      d="m21.854 2.147-10.94 10.939"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out flex-1"
        />
      </div>
    </div>
    <div
      class="h-full bg-charcoal/80 border-l border-ash/40 flex flex-col items-center py-3 w-12 flex-shrink-0"
    >
      <button
        aria-label="Expand artifacts panel"
        class="p-2 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150 relative"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.196 12.87l-.825.483a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.758 0l7.25-4.25a.75.75 0 000-1.294l-.825-.484-5.666 3.322a2.25 2.25 0 01-2.276 0L3.196 12.87z"
          />
          <path
            d="M3.196 8.87l-.825.483a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.758 0l7.25-4.25a.75.75 0 000-1.294l-.825-.484-5.666 3.322a2.25 2.25 0 01-2.276 0L3.196 8.87z"
          />
          <path
            d="M10.38 1.103a.75.75 0 00-.76 0l-7.25 4.25a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.76 0l7.25-4.25a.75.75 0 000-1.294l-7.25-4.25z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`ChatInterface matches snapshot while streaming 1`] = `
<div>
  <div
    class="flex h-full w-full bg-obsidian overflow-hidden"
  >
    <div
      class="h-full bg-charcoal/80 border-r border-ash/40 flex flex-col w-64 flex-shrink-0"
    >
      <div
        class="p-3 border-b border-ash/40 flex-shrink-0 flex items-center gap-2"
      >
        <button
          aria-label="Collapse sidebar"
          class="p-1.5 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150"
        >
          <svg
            class="w-5 h-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="flex-1 px-3 py-2 bg-gold/10 hover:bg-gold/20 text-gold border border-gold/30 flex items-center justify-center gap-2 transition-colors duration-200"
        >
          <svg
            class="w-4 h-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            New Chat
          </span>
        </button>
      </div>
      <div
        class="flex-1 overflow-y-auto py-2"
      >
        <p
          class="px-4 py-2 text-sm text-silver/60"
        >
          No conversations yet
        </p>
      </div>
    </div>
    <div
      class="flex-1 flex flex-col min-w-0 relative"
    >
      <div
        class="flex-1 flex flex-col min-h-0 relative transition-all duration-500 justify-start"
      >
        <div
          class="transition-all duration-500 ease-in-out flex-zero"
        />
        <div
          class="transition-all duration-500 ease-in-out overflow-hidden flex flex-col flex-1 opacity-100"
        >
          <div
            class="flex flex-col w-full h-full overflow-y-auto scroll-smooth px-4 py-6 overscroll-contain flex-1"
          >
            <div
              class="relative flex flex-col gap-3"
            >
              <div
                class="scroll-mt-4"
              >
                <div
                  class="flex flex-col items-end"
                >
                  <div
                    class="px-3 py-2 w-fit max-w-11/12 bg-gold text-obsidian ml-auto"
                  >
                    <div
                      class="prose prose-sm prose-inherit"
                    >
                      Hello!
                    </div>
                  </div>
                  <div
                    class="flex items-center gap-0.5 mt-1 mr-1"
                  >
                    <button
                      aria-label="Copy message"
                      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
                      type="button"
                    >
                      <svg
                        class="w-3.5 h-3.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2"
                          ry="2"
                          width="14"
                          x="8"
                          y="8"
                        />
                        <path
                          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="flex flex-col items-start"
                >
                  <div
                    class="px-3 py-2 w-fit max-w-11/12 bg-charcoal border border-ash text-white mr-auto"
                  >
                    <div
                      class="prose prose-sm prose-invert"
                    >
                      Hi there!
                      <span
                        aria-hidden="true"
                        class="inline-block bg-current animate-cursor-blink w-0.5 h-cursor translate-y-cursor-offset ml-0.5"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="shrink-0 pointer-events-none"
              style="height: 0px;"
            />
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out z-10 w-full shrink-0 p-4 border-t border-ash/40 bg-obsidian"
        >
          <div
            class="w-full transition-all duration-300 ease-out"
          >
            <div
              class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200"
            >
              <div
                class="flex items-end"
              >
                <button
                  aria-label="Attach file"
                  class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-paperclip w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
                    />
                  </svg>
                </button>
                <input
                  aria-hidden="true"
                  class="hidden"
                  multiple=""
                  type="file"
                />
                <textarea
                  class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12 opacity-50 cursor-not-allowed"
                  disabled=""
                  placeholder="Send a message..."
                  rows="1"
                  style="max-height: 200px;"
                />
                <button
                  aria-label="Stop generation"
                  class="absolute right-2 bottom-2 p-2 text-error hover:bg-error/10 transition-colors duration-200"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-square w-5 h-5 fill-current"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="3"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out flex-zero"
        />
      </div>
    </div>
    <div
      class="h-full bg-charcoal/80 border-l border-ash/40 flex flex-col items-center py-3 w-12 flex-shrink-0"
    >
      <button
        aria-label="Expand artifacts panel"
        class="p-2 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150 relative"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.196 12.87l-.825.483a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.758 0l7.25-4.25a.75.75 0 000-1.294l-.825-.484-5.666 3.322a2.25 2.25 0 01-2.276 0L3.196 12.87z"
          />
          <path
            d="M3.196 8.87l-.825.483a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.758 0l7.25-4.25a.75.75 0 000-1.294l-.825-.484-5.666 3.322a2.25 2.25 0 01-2.276 0L3.196 8.87z"
          />
          <path
            d="M10.38 1.103a.75.75 0 00-.76 0l-7.25 4.25a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.76 0l7.25-4.25a.75.75 0 000-1.294l-7.25-4.25z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`ChatInterface matches snapshot with messages 1`] = `
<div>
  <div
    class="flex h-full w-full bg-obsidian overflow-hidden"
  >
    <div
      class="h-full bg-charcoal/80 border-r border-ash/40 flex flex-col w-64 flex-shrink-0"
    >
      <div
        class="p-3 border-b border-ash/40 flex-shrink-0 flex items-center gap-2"
      >
        <button
          aria-label="Collapse sidebar"
          class="p-1.5 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150"
        >
          <svg
            class="w-5 h-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="flex-1 px-3 py-2 bg-gold/10 hover:bg-gold/20 text-gold border border-gold/30 flex items-center justify-center gap-2 transition-colors duration-200"
        >
          <svg
            class="w-4 h-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            New Chat
          </span>
        </button>
      </div>
      <div
        class="flex-1 overflow-y-auto py-2"
      >
        <div
          class="space-y-1 px-2"
        >
          <button
            class="w-full px-3 py-2 text-left transition-colors duration-150 bg-ash/40 text-white"
          >
            <p
              class="text-sm font-medium truncate"
            >
              Conversation 1
            </p>
            <p
              class="text-xs text-silver/60 truncate mt-0.5"
            >
              Hello...
            </p>
          </button>
          <button
            class="w-full px-3 py-2 text-left transition-colors duration-150 text-silver hover:bg-ash/20 hover:text-white"
          >
            <p
              class="text-sm font-medium truncate"
            >
              Conversation 2
            </p>
            <p
              class="text-xs text-silver/60 truncate mt-0.5"
            >
              World...
            </p>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex flex-col min-w-0 relative"
    >
      <div
        class="flex-1 flex flex-col min-h-0 relative transition-all duration-500 justify-start"
      >
        <div
          class="transition-all duration-500 ease-in-out flex-zero"
        />
        <div
          class="transition-all duration-500 ease-in-out overflow-hidden flex flex-col flex-1 opacity-100"
        >
          <div
            class="flex flex-col w-full h-full overflow-y-auto scroll-smooth px-4 py-6 overscroll-contain flex-1"
          >
            <div
              class="relative flex flex-col gap-3"
            >
              <div
                class="scroll-mt-4"
              >
                <div
                  class="flex flex-col items-end"
                >
                  <div
                    class="px-3 py-2 w-fit max-w-11/12 bg-gold text-obsidian ml-auto"
                  >
                    <div
                      class="prose prose-sm prose-inherit"
                    >
                      Hello!
                    </div>
                  </div>
                  <div
                    class="flex items-center gap-0.5 mt-1 mr-1"
                  >
                    <button
                      aria-label="Copy message"
                      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
                      type="button"
                    >
                      <svg
                        class="w-3.5 h-3.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2"
                          ry="2"
                          width="14"
                          x="8"
                          y="8"
                        />
                        <path
                          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="flex flex-col items-start"
                >
                  <div
                    class="px-3 py-2 w-fit max-w-11/12 bg-charcoal border border-ash text-white mr-auto"
                  >
                    <div
                      class="prose prose-sm prose-invert"
                    >
                      Hi there!
                    </div>
                  </div>
                  <div
                    class="flex items-center gap-0.5 mt-1 ml-1"
                  >
                    <button
                      aria-label="Copy message"
                      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
                      type="button"
                    >
                      <svg
                        class="w-3.5 h-3.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2"
                          ry="2"
                          width="14"
                          x="8"
                          y="8"
                        />
                        <path
                          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="shrink-0 pointer-events-none"
              style="height: 0px;"
            />
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out z-10 w-full shrink-0 p-4 border-t border-ash/40 bg-obsidian"
        >
          <div
            class="w-full transition-all duration-300 ease-out"
          >
            <div
              class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200"
            >
              <div
                class="flex items-end"
              >
                <button
                  aria-label="Attach file"
                  class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-paperclip w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
                    />
                  </svg>
                </button>
                <input
                  aria-hidden="true"
                  class="hidden"
                  multiple=""
                  type="file"
                />
                <textarea
                  class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12"
                  placeholder="Send a message..."
                  rows="1"
                  style="max-height: 200px;"
                />
                <button
                  aria-label="Send message"
                  class="absolute right-2 bottom-2 p-2 transition-colors duration-200 text-silver/40 cursor-not-allowed"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-send w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                    />
                    <path
                      d="m21.854 2.147-10.94 10.939"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out flex-zero"
        />
      </div>
    </div>
    <div
      class="h-full bg-charcoal/80 border-l border-ash/40 flex flex-col items-center py-3 w-12 flex-shrink-0"
    >
      <button
        aria-label="Expand artifacts panel"
        class="p-2 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150 relative"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.196 12.87l-.825.483a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.758 0l7.25-4.25a.75.75 0 000-1.294l-.825-.484-5.666 3.322a2.25 2.25 0 01-2.276 0L3.196 12.87z"
          />
          <path
            d="M3.196 8.87l-.825.483a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.758 0l7.25-4.25a.75.75 0 000-1.294l-.825-.484-5.666 3.322a2.25 2.25 0 01-2.276 0L3.196 8.87z"
          />
          <path
            d="M10.38 1.103a.75.75 0 00-.76 0l-7.25 4.25a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.76 0l7.25-4.25a.75.75 0 000-1.294l-7.25-4.25z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
